--- a/frontend/app/views/spree/checkout/_confirm.html.erb
+++ b/frontend/app/views/spree/checkout/_confirm.html.erb
@@ -1,4 +1,4 @@
-<div class="card  " id="order_details" data-hook>
+<div class="card" id="order_details" data-hook>
   <div class="card-header">
     <h3 class="card-title"><%= Spree.t(:confirm) %></h3>
   </div>
@@ -7,10 +7,12 @@
   </div>
 </div>
 
-<div class="well text-right form-buttons" data-hook="buttons">
-  <% if @order.using_store_credit? %>
-    <%= button_tag Spree.t('store_credit.remove'), name: 'remove_store_credit', class: 'continue btn' %>
-  <% end %>
-  <%= submit_tag Spree.t(:place_order), class: 'btn btn-lg btn-success' %>
-  <script>Spree.disableSaveOnClick();</script>
+<div class="card text-right form-buttons mt-4" data-hook="buttons">
+  <div class="card-body">
+    <% if @order.using_store_credit? %>
+      <%= button_tag Spree.t('store_credit.remove'), name: 'remove_store_credit', class: 'continue btn' %>
+    <% end %>
+    <%= submit_tag Spree.t(:place_order), class: 'btn btn-lg btn-success' %>
+    <script>Spree.disableSaveOnClick();</script>
+  </div>
 </div>
