--- a/frontend/app/views/spree/checkout/_payment.html.erb
+++ b/frontend/app/views/spree/checkout/_payment.html.erb
@@ -1,6 +1,6 @@
-<div class="card  " id="payment" data-hook>
+<div class="card" id="payment" data-hook>
   <div class="card-header">
-    <h3 class="card-title"><%= Spree.t(:payment_information) %></h3>
+    <h3 class="card-title mb-0"><%= Spree.t(:payment_information) %></h3>
   </div>
   <div class="card-body" data-hook="checkout_payment_step">
     <% if @payment_sources.present? %>
@@ -68,7 +68,9 @@
   </div>
 </div>
 
-<div class="well text-right form-buttons" data-hook="buttons">
-  <%= submit_tag Spree.t(:save_and_continue), class: 'btn btn-lg btn-success primary' %>
-  <script>Spree.disableSaveOnClick();</script>
+<div class="card text-right form-buttons mt-4" data-hook="buttons">
+  <div class="card-body">
+    <%= submit_tag Spree.t(:save_and_continue), class: 'btn btn-lg btn-success primary' %>
+    <script>Spree.disableSaveOnClick();</script>
+  </div>
 </div>
