--- a/frontend/app/views/spree/shared/_nav_bar.html.erb
+++ b/frontend/app/views/spree/shared/_nav_bar.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar col-md-8 col-sm-9" id="top-nav-bar">
+<nav class="navbar ml-auto" id="top-nav-bar">
   <ul id="nav-bar" class="nav navbar-nav navbar-right" data-hook>
     <li id="search-bar" data-hook>
       <%= render partial: 'spree/shared/search' %>
