--- a/frontend/app/views/spree/shared/_search.html.erb
+++ b/frontend/app/views/spree/shared/_search.html.erb
@@ -1,6 +1,6 @@
 <% @taxons = @taxon && @taxon.parent ? @taxon.parent.children : Spree::Taxon.roots %>
-<%= form_tag spree.products_path, method: :get, class: "navbar-form" do %>
-  <div class="form-group">
+<%= form_tag spree.products_path, method: :get, class: "form-inline" do %>
+  <div class="input-group mb-2 mr-sm-2 mb-sm-0">
     <% cache [I18n.locale, @taxons] do %>
       <%= select_tag :taxon,
             options_for_select([[Spree.t(:all_departments), '']] +
@@ -8,7 +8,7 @@
                                   @taxon ? @taxon.id : params[:taxon]), 'aria-label' => 'Taxon', class: "form-control" %>
     <% end %>
   </div>
-  <div class="form-group">
+  <div class="input-group mb-2 mr-sm-2 mb-sm-0">
     <%= search_field_tag :keywords, params[:keywords], placeholder: Spree.t(:search), class: "form-control" %>
   </div>
   <%= submit_tag Spree.t(:search), name: nil, class: "btn btn-success" %>
