Product thumbnails fixes. Header padding.

--- a/frontend/app/views/spree/shared/_filters.html.erb
+++ b/frontend/app/views/spree/shared/_filters.html.erb
@@ -8,7 +8,7 @@
       <% next if labels.empty? %>
       <div class="navigation mt-4" data-hook="navigation" aria-labelledby="products_search_wrapper" role="group">
 
-        <h4 class="filter-title mt-0" id="products_search_wrapper">
+        <h4 class="filter-title mt-0 h5" id="products_search_wrapper">
           <%= filter[:name] %>
         </h4>
 
