--- a/frontend/app/views/spree/shared/_header.html.erb
+++ b/frontend/app/views/spree/shared/_header.html.erb
@@ -1,5 +1,5 @@
 <div id="spree-header">
-  <header id="header" data-hook>
+  <header id="header" data-hook class="py-3">
     <div class="container">
       <div class="row">
         <figure id="logo" class="col-3 col-md-4" data-hook>
