Use bootstrap-glyphicons gem for icons

--- a/frontend/app/assets/stylesheets/spree/frontend/frontend_bootstrap.scss.erb
+++ b/frontend/app/assets/stylesheets/spree/frontend/frontend_bootstrap.scss.erb
@@ -1,4 +1,5 @@
 
+@import 'bootstrap/glyphicons';
 @import "bootstrap";
 @import "variables";
 // -- Spree Custom Header and Footer ---------------------
@@ -109,25 +110,4 @@ table {
 
 .save-user-address-wrapper {
   display: inline-block;
-}
-
-
-
-.glyphicon {
-  display: inline-block;
-  height: 1em;
-  padding-left: 20px;
-  background-repeat: no-repeat;
-}
-
-.glyphicon-shopping-cart {
-  background-image: asset-url("shopping-cart");
-}
-
-.glyphicon-minus-sign {
-  background-image: asset-url("minus-circle");
-}
-
-.navbar-toggler-icon {
-  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,255,255, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
 }
