--- a/frontend/app/views/spree/products/_properties.html.erb
+++ b/frontend/app/views/spree/products/_properties.html.erb
@@ -1,5 +1,8 @@
 <% unless @product_properties.blank? %>
-  <h3 class="product-section-title"><%= Spree.t('properties')%></h3>
+  <h3 class="product-section-title h4 mt-4">
+    <%= Spree.t('properties')%>
+  </h3>
+
   <table id="product-properties" class="table table-striped" data-hook>
     <tbody>
       <% @product_properties.each do |product_property| %>
