--- a/frontend/app/views/spree/shared/_search.html.erb
+++ b/frontend/app/views/spree/shared/_search.html.erb
@@ -1,11 +1,15 @@
 <% @taxons = @taxon && @taxon.parent ? @taxon.parent.children : Spree::Taxon.roots %>
-<%= form_tag spree.products_path, method: :get, class: "ml-2 form-inline d-flex" do %>
+<%= form_tag spree.products_path, method: :get, class: "ml-2 form-inline d-flex flex-column flex-sm-row" do %>
   <div class="form-group">
     <% cache [I18n.locale, @taxons] do %>
       <%= select_tag :taxon,
-            options_for_select([[Spree.t(:all_departments), '']] +
-                                  @taxons.map {|t| [t.name, t.id]},
-                                  @taxon ? @taxon.id : params[:taxon]), 'aria-label' => 'Taxon', class: "form-control mr-2" %>
+        options_for_select(
+          [[Spree.t(:all_departments), '']] +
+          @taxons.map {|t| [t.name, t.id]},
+          @taxon ? @taxon.id : params[:taxon]
+        ),
+        aria: { label: 'Taxon' },
+        class: "form-control mr-2" %>
     <% end %>
   </div>
   <div class="form-group">
