Finish fixing checkout markup and styles.

--- a/frontend/app/assets/stylesheets/spree/frontend/frontend_bootstrap.css.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/frontend_bootstrap.css.scss
@@ -46,6 +46,10 @@
 .alert-error { @extend .alert-danger; }
 .alert-alert { @extend .alert-info; }
 
+.list-unstyled {
+  @include list-unstyled();
+}
+
 .progress-steps {
   margin-top: $line-height-base;
 }
