--- a/frontend/app/views/spree/checkout/_delivery.html.erb
+++ b/frontend/app/views/spree/checkout/_delivery.html.erb
@@ -1,14 +1,16 @@
 <div class="card  " id='shipping_method' data-hook>
   <div class="card-header">
-    <h3 class="card-title mb-0"><%= Spree.t(:delivery) %></h3>
+    <h3 class="card-title mb-0 h5"><%= Spree.t(:delivery) %></h3>
   </div>
   <div class="card-body" data-hook="shipping_method_inner">
     <div id="methods">
       <%= form.fields_for :shipments do |ship_form| %>
         <div class="shipment">
-          <h4 class="stock-location" data-hook="stock-location">
+          <h4 class="stock-location h5" data-hook="stock-location">
             <%= Spree.t(:package_from) %>
-            <strong class="stock-location-name" data-hook="stock-location-name"><%= ship_form.object.stock_location.name %></strong>
+            <strong class="stock-location-name" data-hook="stock-location-name">
+              <%= ship_form.object.stock_location.name %>
+            </strong>
           </h4>
 
           <table class="table stock-contents" data-hook="stock-contents">
@@ -38,12 +40,20 @@
             </tbody>
           </table>
 
-          <h4 class="stock-shipping-method-title"><%= Spree.t(:shipping_method) %></h4>
+          <h4 class="stock-shipping-method-title h5">
+            <%= Spree.t(:shipping_method) %>
+          </h4>
+
           <ul class="list-group shipping-methods">
             <% ship_form.object.shipping_rates.each do |rate| %>
               <li class="list-group-item shipping-method">
                 <label>
-                  <%= ship_form.radio_button :selected_shipping_rate_id, rate.id, data: { behavior: 'shipping-method-selector', cost: rate.display_cost } %>
+                  <%= ship_form.radio_button :selected_shipping_rate_id,
+                    rate.id,
+                    data: {
+                      behavior: 'shipping-method-selector',
+                      cost: rate.display_cost
+                  } %>
                   <span class="rate-name"><%= rate.name %></span>
                   <span class="badge rate-cost"><%= rate.display_cost %></span>
                 </label>
@@ -55,7 +65,7 @@
 
       <% if @differentiator.try(:missing?) %>
         <div class="shipment unshippable">
-          <h3 class="stock-location mb-0" data-hook="stock-location">
+          <h3 class="stock-location mb-0 h5" data-hook="stock-location">
             <%= Spree.t(:unshippable_items) %>
           </h3>
           <table class="table stock-contents" data-hook="stock-missing">
@@ -87,7 +97,9 @@
     </div>
     <% if Spree::Config[:shipping_instructions] %>
       <p id="minstrs" data-hook>
-        <h4><%= Spree.t(:shipping_instructions) %></h4>
+        <h4 class="h5">
+          <%= Spree.t(:shipping_instructions) %>
+        </h4>
         <%= form.text_area :special_instructions, cols: 40, rows: 4, class: "form-control" %>
       </p>
     <% end %>
