--- a/frontend/app/views/spree/checkout/_payment.html.erb
+++ b/frontend/app/views/spree/checkout/_payment.html.erb
@@ -1,7 +1,10 @@
 <div class="card" id="payment" data-hook>
   <div class="card-header">
-    <h3 class="card-title mb-0"><%= Spree.t(:payment_information) %></h3>
+    <h3 class="card-title mb-0 h5">
+      <%= Spree.t(:payment_information) %>
+    </h3>
   </div>
+
   <div class="card-body" data-hook="checkout_payment_step">
     <% if @payment_sources.present? %>
       <div class="card_options">
@@ -48,7 +51,7 @@
       <% end %>
     </ul>
 
-    <ul class="nav" id="payment-methods" data-hook>
+    <ul id="payment-methods" class="list-unstyled position-relative" data-hook>
       <% @order.available_payment_methods.each do |method| %>
         <li id="payment_method_<%= method.id %>" class="<%= 'last' if method == @order.available_payment_methods.last %>" data-hook>
           <fieldset>
@@ -60,7 +63,7 @@
 
 
     <% if Spree::Frontend::Config[:coupon_codes_enabled] %>
-      <p class='field' data-hook='coupon_code'>
+      <p class='field mb-0' data-hook='coupon_code'>
         <%= form.label :coupon_code %>
         <%= form.text_field :coupon_code, class: 'form-control' %>
       </p>
