--- a/frontend/app/views/spree/orders/show.html.erb
+++ b/frontend/app/views/spree/orders/show.html.erb
@@ -2,7 +2,7 @@
   <h1><%= accurate_title %></h1>
 
   <% if order_just_completed?(@order) %>
-    <strong><%= Spree.t(:thank_you_for_your_order) %></strong>
+    <p><strong><%= Spree.t(:thank_you_for_your_order) %></strong></p>
   <% end %>
 
   <div id="order" data-hook>
