Fix product add to cart form input group  markup

--- a/frontend/app/views/spree/products/_cart_form.html.erb
+++ b/frontend/app/views/spree/products/_cart_form.html.erb
@@ -56,11 +56,11 @@
           <div class="add-to-cart">
             <div class="input-group">
               <%= number_field_tag :quantity, 1, class: 'title form-control', min: 1 %>
-              <span class="input-group-btn">
+              <div class="input-group-append">
                 <%= button_tag class: 'btn btn-success', id: 'add-to-cart-button', type: :submit do %>
                   <%= Spree.t(:add_to_cart) %>
                 <% end %>
-              </span>
+              </div>
             </div>
           </div>
         <% end %>
