Initial bootstrap 4 migration for backend. Cleanup.

--- a/backend/app/assets/stylesheets/spree/backend/components/_sidebar.scss
+++ b/backend/app/assets/stylesheets/spree/backend/components/_sidebar.scss
@@ -1,9 +1,9 @@
 #main-sidebar {
-  position: fixed;
-  top: $navbar-brand-height;
-  bottom: 0;
-  left: 0;
-  padding: 0;
+  // position: fixed;
+  // top: $navbar-brand-height;
+  // bottom: 0;
+  // left: 0;
+  // padding: 0;
   z-index: 1000;
   display: block;
   overflow-x: hidden;
