--- a/backend/app/assets/stylesheets/spree/backend/spree_admin.css.scss
+++ b/backend/app/assets/stylesheets/spree/backend/spree_admin.css.scss
@@ -3,6 +3,7 @@
 @import 'bootstrap';
 @import 'glyphicons';
 
+@import 'components/navbar';
 @import 'components/sidebar';
 @import 'components/tables';
 @import 'components/labels';
@@ -10,15 +11,12 @@
 @import 'components/page_header';
 @import 'components/icons';
 @import 'components/buttons';
-@import 'components/wells';
 @import 'components/filters';
 @import 'components/panels';
 @import 'components/navigation';
 @import 'components/taxon_products_view';
 @import 'components/progress';
 @import 'components/spinner';
-
-@import 'sections/account';
 
 @import 'plugins/select2';
 @import 'plugins/jquery_ui';
