--- a/backend/app/views/spree/admin/shared/_header.html.erb
+++ b/backend/app/views/spree/admin/shared/_header.html.erb
@@ -1,26 +1,20 @@
 <header class="header logged-in">
 
-  <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-    <div class="container-fluid">
-      <div class="row">
-        <div class="navbar-header col-xs-3 col-md-2">
-          <%= link_to(
-            image_tag(Spree::Config[:admin_interface_logo], id: 'logo'),
-            spree.admin_path,
-            class: "logo navbar-brand"
-          ) %>
-            <span class="navbar-toggle" id="sidebar-toggle">
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </span>
-        </div>
-        <div class="col-xs-9 col-md-10">
-          <div class="navbar-right">
-            <%= render partial: 'spree/admin/shared/account_nav' %>
-          </div>
-        </div>
-      </div>
+  <nav class="navbar fixed-top navbar-dark align-items-stretch" role="navigation">
+    <div class="navbar-header col-3 col-md-2">
+      <%= link_to(
+        image_tag(Spree::Config[:admin_interface_logo], id: 'logo'),
+        spree.admin_path,
+        class: "logo navbar-brand"
+      ) %>
+      <span class="navbar-toggle" id="sidebar-toggle">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </span>
+    </div>
+    <div class="col-9 col-md-10">
+      <%= render partial: 'spree/admin/shared/account_nav' %>
     </div>
   </nav>
 
