--- a/backend/app/assets/stylesheets/spree/backend/spree_admin.css.scss
+++ b/backend/app/assets/stylesheets/spree/backend/spree_admin.css.scss
@@ -6,7 +6,7 @@
 @import 'components/navbar';
 @import 'components/sidebar';
 @import 'components/tables';
-@import 'components/labels';
+@import 'components/badges';
 @import 'components/main';
 @import 'components/page_header';
 @import 'components/icons';
