--- a/backend/app/views/spree/admin/adjustments/_adjustment.html.erb
+++ b/backend/app/views/spree/admin/adjustments/_adjustment.html.erb
@@ -14,7 +14,7 @@
     <%= adjustment.display_amount.to_html %>
   </td>
   <td class="text-center">
-    <span class="label label-<%= adjustment.state %>">
+    <span class="badge badge-<%= adjustment.state %>">
       <%= adjustment.state %>
     </span>
   </td>
