--- a/backend/app/assets/stylesheets/spree/backend/components/_sidebar.scss
+++ b/backend/app/assets/stylesheets/spree/backend/components/_sidebar.scss
@@ -1,9 +1,4 @@
 #main-sidebar {
-  // position: fixed;
-  // top: $navbar-brand-height;
-  // bottom: 0;
-  // left: 0;
-  // padding: 0;
   z-index: 1000;
   display: block;
   overflow-x: hidden;
@@ -66,7 +61,7 @@
 
       &.selected {
         a {
-          color: $brand-success
+          color: $success
         }
       }
     }
