--- a/backend/app/assets/stylesheets/spree/backend/plugins/_select2.scss
+++ b/backend/app/assets/stylesheets/spree/backend/plugins/_select2.scss
@@ -4,12 +4,12 @@
   .select2-choice {
     height: $input-height;
     line-height: 2.2;
-    border-color: $input-border;
+    border-color: $input-border-color;
     background-image: none;
     background-color: $input-bg;
 
     &, .select2-arrow {
-      border-radius: $border-radius-base;
+      border-radius: $border-radius;
     }
 
     .select2-arrow {
@@ -17,7 +17,7 @@
       background-color: $input-bg;
       border-top-left-radius: 0;
       border-bottom-left-radius: 0;
-      border-left-color: $input-border;
+      border-left-color: $input-border-color;
 
       b {
         background-position: 0 7px;
@@ -37,13 +37,13 @@
 }
 
 .select2-search input {
-  border-color: $input-border;
-  border-radius: $border-radius-base;
+  border-color: $input-border-color;
+  border-radius: $border-radius;
 }
 
 .select2-drop {
   &, &.select2-drop-above {
-    border-radius: $border-radius-base;
+    border-radius: $border-radius;
     box-shadow: none;
   }
 }
@@ -60,7 +60,7 @@
 }
 
 .select2-dropdown-open.select2-drop-above .select2-choice {
-  border-radius: 0 0 $border-radius-base $border-radius-base;
+  border-radius: 0 0 $border-radius $border-radius;
 }
 
 .select2-drop-above,
@@ -68,7 +68,7 @@
 .select2-dropdown-open .select2-choice,
 .select2-drop.select2-drop-above.select2-drop-active,
 .select2-drop.select2-drop-active {
-  border-color: lighten($brand-success, 20);
+  border-color: lighten($success, 20);
 }
 
 .select2-result-label {
@@ -76,7 +76,7 @@
 }
 
 .select2-results .select2-highlighted {
-  background-color: $brand-primary;
+  background-color: $primary;
 
   .select2-result-label {
     color: white;
@@ -86,7 +86,7 @@
 .select2-container-multi {
   .select2-choices {
     line-height: 1.8;
-    border-color: $input-border;
+    border-color: $input-border-color;
     background-image: none;
     background-color: $input-bg;
 
@@ -121,7 +121,7 @@
   &.select2-container-active {
     .select2-choices {
       box-shadow: none;
-      border-color: lighten($brand-success, 20);
+      border-color: lighten($success, 20);
     }
   }
 }
