Frontend navigation style fixes

--- a/frontend/app/views/spree/shared/_main_nav_bar.html.erb
+++ b/frontend/app/views/spree/shared/_main_nav_bar.html.erb
@@ -1,10 +1,10 @@
 <nav id="main-nav-bar" class="navbar">
-  <ul class="nav navbar-nav" data-hook>
+  <ul class="nav" data-hook>
     <li id="home-link" class="nav-item" data-hook>
       <%= link_to Spree.t(:home), spree.root_path, class: 'nav-link' %>
     </li>
   </ul>
-  <ul class="nav navbar-nav navbar-right" data-hook>
+  <ul class="nav" data-hook>
     <li id="link-to-cart" class="nav-item" data-hook>
       <noscript>
         <%= link_to_cart %>
