--- a/frontend/app/views/spree/shared/_nav_bar.html.erb
+++ b/frontend/app/views/spree/shared/_nav_bar.html.erb
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-dark col-md-8 col-sm-9" id="top-nav-bar">
-  <ul id="nav-bar" class="navbar-nav d-flex flex-column flex-sm-row navbar-right w-100 justify-content-end mr-0 mr-md-3" data-hook>
+  <ul id="nav-bar" class="nav align-items-center d-flex flex-column flex-sm-row navbar-right w-100 justify-content-start justify-content-md-end" data-hook>
     <li id="search-bar" data-hook>
       <%= render partial: 'spree/shared/search' %>
     </li>
