--- a/backend/app/views/spree/layouts/admin.html.erb
+++ b/backend/app/views/spree/layouts/admin.html.erb
@@ -30,7 +30,7 @@
         <%#-------------------------------------------------%>
         <%# Sidebar                                         %>
         <%#-------------------------------------------------%>
-        <aside class="<%= main_sidebar_classes %> sidebar position-fixed h-100" id="main-sidebar" data-hook="admin_tabs">
+        <aside class="<%= main_sidebar_classes %> sidebar position-fixed d-flex justify-content-between flex-column" id="main-sidebar" data-hook="admin_tabs">
           <%= render partial: 'spree/admin/shared/main_menu' %>
 
           <%= render partial: 'spree/admin/shared/version' %>
