--- a/backend/app/assets/stylesheets/spree/backend/components/_navigation.scss
+++ b/backend/app/assets/stylesheets/spree/backend/components/_navigation.scss
@@ -1,10 +1,6 @@
-#sidebar-toggle {
-  display: block;
+.navbar-toggler {
   border: none;
-  padding: 0;
-  margin: 0;
-  position: absolute;
   right: 0;
-  margin-top: 17px;
+  top: 0;
   cursor: pointer;
 }
