--- a/backend/app/assets/stylesheets/spree/backend/components/_filters.scss
+++ b/backend/app/assets/stylesheets/spree/backend/components/_filters.scss
@@ -6,20 +6,27 @@
 }
 
 .index-filter-button {
+  font-size: $font-size-sm;
   .glyphicon {
-    color: $gray-100;
+    color: $gray-800;
   }
 
   button {
+    height: 100%;
     text-transform: uppercase;
     letter-spacing: 2px;
     font-weight: bold;
-    font-size: $font-size-base - 3;
+    font-size: $small-font-size;
+    border-color: $input-border-color;
     border-right: none;
+    background-color: $white;
 
-    &:focus {
+    &:hover, &:focus {
       background-color: $gray-100;
-      border-color: $input-border-color;
     }
+  }
+
+  .js-quick-search {
+    font-size: $font-size-sm;
   }
 }
