Header dropdown style fixes

--- a/backend/app/views/spree/admin/shared/_header.html.erb
+++ b/backend/app/views/spree/admin/shared/_header.html.erb
@@ -16,7 +16,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
     </div>
-    <div class="col-9 col-md-10">
+    <div class="col-9 col-md-10 pr-0">
       <%= render partial: 'spree/admin/shared/account_nav' %>
     </div>
   </nav>
