--- a/backend/app/assets/stylesheets/spree/backend/components/_navbar.scss
+++ b/backend/app/assets/stylesheets/spree/backend/components/_navbar.scss
@@ -2,5 +2,20 @@
   .navbar {
     background-color: $navbar-inverse-bg;
     padding: 0;
+
+    a:hover {
+      text-decoration: none;
+    }
+  }
+
+  .dropdown-toggle {
+    &[aria-expanded="true"] {
+      background-color: $gray-900;
+    }
+
+    &:hover,
+    &:focus {
+      text-decoration: none;
+    }
   }
 }
