--- a/backend/app/views/spree/admin/shared/_account_nav.html.erb
+++ b/backend/app/views/spree/admin/shared/_account_nav.html.erb
@@ -2,17 +2,17 @@
   <ul class="nav navbar-nav align-items-end h-100 justify-content-center">
     <li class="dropdown user user-menu h-100">
       <div class="dropdown d-flex align-items-center h-100">
-        <button class="dropdown-toggle btn btn-link text-white" data-toggle="dropdown">
+        <button class="dropdown-toggle btn btn-link text-white h-100" data-toggle="dropdown">
           <i class="glyphicon glyphicon-user"></i>
           <span>
             <%= try_spree_current_user.email %> <i class="caret"></i>
           </span>
         </button>
 
-        <ul class="dropdown-menu position-absolute">
+        <ul class="dropdown-menu position-absolute mt-0 rounded-0 border-top-0">
           <% if spree.respond_to? :root_path %>
-            <li class="dropdown-item">
-              <%= link_to spree.root_path, target: :blank do %>
+            <li class="dropdown-item p-0">
+              <%= link_to spree.root_path, target: :blank, class: 'd-block text-dark py-2 px-4' do %>
                 <i class="glyphicon glyphicon-new-window"></i>
                 &nbsp;
                 <%= Spree.t(:back_to_store) %>
@@ -20,8 +20,8 @@
             </li>
           <% end %>
 
-          <li class="dropdown-item">
-            <%= link_to spree.edit_admin_user_path(try_spree_current_user) do %>
+          <li class="dropdown-item p-0">
+            <%= link_to spree.edit_admin_user_path(try_spree_current_user), class: 'd-block text-dark py-2 px-4' do %>
               <i class="glyphicon glyphicon-user"></i>
               &nbsp;
               <%= Spree.t(:account) %>
@@ -29,8 +29,8 @@
           </li>
 
           <% if spree.respond_to? :admin_logout_path %>
-            <li class="dropdown-item">
-              <%= link_to spree.admin_logout_path do %>
+            <li class="dropdown-item p-0">
+              <%= link_to spree.admin_logout_path, class: 'd-block text-dark py-2 px-4' do %>
                 <i class="glyphicon glyphicon-log-out"></i>
                 &nbsp;
                 <%= Spree.t(:logout) %>
@@ -40,24 +40,24 @@
 
           <div class="dropdown-divider"></div>
 
-          <li class="dropdown-item">
-            <%= link_to 'http://guides.spreecommerce.org', target: :blank do %>
+          <li class="dropdown-item p-0">
+            <%= link_to 'http://guides.spreecommerce.org', target: :blank, class: 'd-block text-dark py-2 px-4' do %>
               <i class="glyphicon glyphicon-info-sign"></i>
               &nbsp;
               <%= Spree.t(:help_center) %>
             <% end %>
           </li>
 
-          <li class="dropdown-item">
-            <%= link_to 'http://slack.spreecommerce.org', target: :blank do %>
+          <li class="dropdown-item p-0">
+            <%= link_to 'http://slack.spreecommerce.org', target: :blank, class: 'd-block text-dark py-2 px-4' do %>
               <i class="glyphicon glyphicon-comment"></i>
               &nbsp;
               <%= Spree.t(:join_slack) %>
             <% end %>
           </li>
 
-          <li class="dropdown-item">
-            <%= link_to 'https://github.com/spree-contrib', target: :blank do %>
+          <li class="dropdown-item p-0">
+            <%= link_to 'https://github.com/spree-contrib', target: :blank, class: 'd-block text-dark py-2 px-4' do %>
               <i class="glyphicon glyphicon-download"></i>
               &nbsp;
               <%= Spree.t(:extensions_directory) %>
