--- a/backend/app/views/spree/admin/orders/index.html.erb
+++ b/backend/app/views/spree/admin/orders/index.html.erb
@@ -11,32 +11,36 @@
 
     <%= search_form_for [:admin, @search] do |f| %>
       <div class="row">
-        <div class="date-range-filter col-xs-12 col-md-8">
+        <div class="date-range-filter col-12 col-lg-8">
           <div class="form-group">
             <%= label_tag :q_created_at_gt, Spree.t(:date_range) %>
-            <div class="row no-padding-bottom">
-              <div class="col-xs-12 col-md-6">
+            <div class="row pb-0">
+              <div class="col-12 col-lg-6">
                 <div class="input-group">
                   <%= f.text_field :created_at_gt, class: 'datepicker datepicker-from form-control js-filterable', value: params[:q][:created_at_gt], placeholder: Spree.t(:start) %>
-                  <span class="input-group-addon">
-                    <i class="icon icon-calendar"></i>
-                  </span>
+                  <div class="input-group-append">
+                    <span class="input-group-text">
+                      <i class="icon icon-calendar"></i>
+                    </span>
+                  </div>
                 </div>
 
               </div>
-              <div class="col-xs-12 col-md-6">
+              <div class="col-12 col-lg-6">
                 <div class="input-group">
                   <%= f.text_field :created_at_lt, class: 'datepicker datepicker-to form-control js-filterable', value: params[:q][:created_at_lt], placeholder: Spree.t(:stop) %>
-                  <span class="input-group-addon">
-                    <i class="icon icon-calendar"></i>
-                  </span>
+                  <div class="input-group-append">
+                    <span class="input-group-text">
+                      <i class="icon icon-calendar"></i>
+                    </span>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
 
-        <div class="col-xs-12 col-md-4">
+        <div class="col-12 col-lg-4">
           <div class="form-group">
             <%= label_tag :q_number_cont, Spree.t(:order_number, number: '') %>
             <%= f.text_field :number_cont, class: 'form-control js-quick-search-target js-filterable' %>
@@ -47,21 +51,21 @@
 
       <div class="row">
 
-        <div class="col-xs-12 col-md-4">
+        <div class="col-12 col-lg-4">
           <div class="form-group">
             <%= label_tag :q_state_eq, Spree.t(:status) %>
             <%= f.select :state_eq, Spree::Order.state_machines[:state].states.map {|s| [Spree.t("order_state.#{s.name}"), s.value]}, { include_blank: true }, class: 'select2 js-filterable' %>
           </div>
         </div>
 
-        <div class="col-xs-12 col-md-4">
+        <div class="col-12 col-lg-4">
           <div class="form-group">
             <%= label_tag :q_payment_state_eq, Spree.t(:payment_state) %>
             <%= f.select :payment_state_eq, Spree::Order::PAYMENT_STATES.map {|s| [Spree.t("payment_states.#{s}"), s]}, { include_blank: true }, class: 'select2 js-filterable' %>
           </div>
         </div>
 
-        <div class="col-xs-12 col-md-4">
+        <div class="col-12 col-lg-4">
           <div class="form-group">
             <%= label_tag :q_shipment_state_eq, Spree.t(:shipment_state) %>
             <%= f.select :shipment_state_eq, Spree::Order::SHIPMENT_STATES.map {|s| [Spree.t("shipment_states.#{s}"), s]}, { include_blank: true }, class: 'select2 js-filterable' %>
@@ -72,21 +76,21 @@
 
       <div class="row">
 
-        <div class="col-xs-12 col-md-4">
+        <div class="col-12 col-lg-4">
           <div class="form-group">
             <%= label_tag :q_bill_address_firstname_start, Spree.t(:first_name_begins_with) %>
             <%= f.text_field :bill_address_firstname_start, class: 'form-control js-filterable' %>
           </div>
         </div>
 
-        <div class="col-xs-12 col-md-4">
+        <div class="col-12 col-lg-4">
           <div class="form-group">
             <%= label_tag :q_bill_address_lastname_start, Spree.t(:last_name_begins_with) %>
             <%= f.text_field :bill_address_lastname_start, class: 'form-control js-filterable' %>
           </div>
         </div>
 
-        <div class="col-xs-12 col-md-4">
+        <div class="col-12 col-lg-4">
           <div class="form-group">
             <%= label_tag :q_email_cont, Spree.t(:email) %>
             <%= f.text_field :email_cont, class: 'form-control js-filterable' %>
@@ -97,46 +101,46 @@
 
       <div class="row">
 
-        <div class="col-xs-12 col-md-4">
+        <div class="col-12 col-lg-4">
           <div class="form-group">
             <%= label_tag :q_line_items_variant_sku_eq, Spree.t(:sku) %>
             <%= f.text_field :line_items_variant_sku_eq, class: 'form-control js-filterable' %>
           </div>
         </div>
 
-        <div class="col-xs-12 col-md-4">
+        <div class="col-12 col-lg-4">
           <div class="form-group">
             <%= label_tag :q_promotions_id_in, Spree.t(:promotion) %>
             <%= f.select :promotions_id_in, Spree::Promotion.applied.pluck(:name, :id), { include_blank: true }, class: 'select2 js-filterable' %>
           </div>
         </div>
 
-        <div class="col-xs-12 col-md-4">
+        <div class="col-12 col-lg-4">
           <div class="form-group">
             <%= label_tag :q_store_id_in, Spree.t(:store) %>
             <%= f.select :store_id_in, Spree::Store.order("#{Spree::Store.table_name}.name").pluck(:name, :id), { include_blank: true }, class: 'select2 js-filterable' %>
           </div>
         </div>
 
-        <div class="col-xs-12 col-md-4">
+        <div class="col-12 col-lg-4">
           <div class="form-group">
             <%= label_tag :q_channel_eq, Spree.t(:channel) %>
             <%= f.select :channel_eq, Spree::Order.distinct.pluck(:channel), { include_blank: true }, class: 'select2 js-filterable' %>
           </div>
         </div>
 
-        <div class="col-xs-12 col-md-4">
+        <div class="col-12 col-lg-4">
 
           <div class="form-group">
 
-            <div class="checkbox">
+            <div class="checkbox mt-2">
               <%= label_tag 'q_completed_at_not_null' do %>
                 <%= f.check_box :completed_at_not_null, {checked: @show_only_completed}, '1', '0' %>
                 <%= Spree.t(:show_only_complete_orders) %>
               <% end %>
             </div>
 
-            <div class="checkbox">
+            <div class="checkbox mt-2">
               <%= label_tag 'q_considered_risky_eq' do %>
                 <%= f.check_box :considered_risky_eq, {checked: (params[:q][:considered_risky_eq] == '1')}, '1', '' %>
                 <%= Spree.t(:show_only_considered_risky) %>
