--- a/backend/app/views/spree/admin/promotion_categories/index.html.erb
+++ b/backend/app/views/spree/admin/promotion_categories/index.html.erb
@@ -3,7 +3,7 @@
 <% end %>
 
 <% content_for :page_actions do %>
-  <%= button_link_to Spree.t(:new_promotion_category), new_object_url, icon: 'add', class: 'btn-success' %>
+  <%= button_link_to Spree.t(:new_promotion_category), new_object_url, icon: 'add', class: 'btn-success text-white' %>
 <% end if can?(:create, Spree::PromotionCategory) %>
 
 <% if @promotion_categories.any? %>
