--- a/backend/app/views/spree/admin/users/index.html.erb
+++ b/backend/app/views/spree/admin/users/index.html.erb
@@ -3,7 +3,7 @@
 <% end %>
 
 <% content_for :page_actions do %>
-  <%= button_link_to Spree.t(:new_user), new_admin_user_url, class: "btn-success", icon: 'add', id: 'admin_new_user_link' %>
+  <%= button_link_to Spree.t(:new_user), new_admin_user_url, class: "btn-success text-white", icon: 'add', id: 'admin_new_user_link' %>
 <% end if can? :create, Spree::user_class %>
 
 <% content_for :table_filter_title do %>
@@ -18,13 +18,13 @@
         <%= f.text_field :email_cont, class: "form-control js-quick-search-target js-filterable" %>
       </div>
       <div class="row">
-        <div class="col-xs-12 col-md-6">
+        <div class="col-12 col-lg-6">
           <div class="form-group">
             <%= f.label :bill_address_firstname_cont, Spree.t(:first_name) %>
             <%= f.text_field :bill_address_firstname_cont, class: 'form-control js-filterable' %>
           </div>
         </div>
-        <div class="col-xs-12 col-md-6">
+        <div class="col-12 col-lg-6">
           <div class="form-group">
             <%= f.label :bill_address_lastname_cont, Spree.t(:last_name) %>
             <%= f.text_field :bill_address_lastname_cont, class: 'form-control js-filterable' %>
