--- a/backend/app/assets/stylesheets/spree/backend/plugins/_jquery_ui.scss
+++ b/backend/app/assets/stylesheets/spree/backend/plugins/_jquery_ui.scss
@@ -55,11 +55,13 @@
   }
 
   .ui-datepicker-next-hover {
-    right: 2;
+    right: 2px;
+    top: 2px;
   }
 
   .ui-datepicker-prev-hover {
-    left: 2;
+    left: 2px;
+    top: 2px;
   }
 
   .ui-datepicker-title {
