--- a/backend/app/views/spree/admin/orders/_add_product.html.erb
+++ b/backend/app/views/spree/admin/orders/_add_product.html.erb
@@ -1,9 +1,9 @@
 <%= render partial: "spree/admin/variants/autocomplete", formats: :js %>
 <%= render partial: "spree/admin/variants/autocomplete_stock", formats: :js %>
 
-<div class="card  " id="add-line-item" data-hook>
+<div class="card mb-3" id="add-line-item" data-hook>
   <div class="card-header">
-    <h1 class="card-title">
+    <h1 class="card-title mb-0 h5">
       <%= Spree.t(:add_product) %>
     </h1>
   </div>
