--- a/backend/app/views/spree/admin/orders/_line_items.html.erb
+++ b/backend/app/views/spree/admin/orders/_line_items.html.erb
@@ -1,7 +1,7 @@
 <% if order.line_items.exists? %>
-  <div class="card  ">
+  <div class="card mb-3">
     <div class="card-header">
-      <h1 class="card-title">
+      <h1 class="card-title mb-0 h5">
         <%= Spree.t(:order_line_items) %>
       </h1>
     </div>
