--- a/backend/app/views/spree/admin/orders/customer_details/edit.html.erb
+++ b/backend/app/views/spree/admin/orders/customer_details/edit.html.erb
@@ -5,9 +5,9 @@
 <% end %>
 
 <% if can? :edit, @order.user %>
-  <div id="select-customer" class="card  " data-hook>
+  <div id="select-customer" class="card mb-3" data-hook>
     <div class="card-header">
-      <h1 class="card-title">
+      <h1 class="card-title mb-0 h5">
         <%= Spree.t(:customer_search) %>
       </h1>
     </div>
