--- a/backend/app/views/spree/admin/promotions/_actions.html.erb
+++ b/backend/app/views/spree/admin/promotions/_actions.html.erb
@@ -1,5 +1,5 @@
 <div class="card-header">
-  <h1 class="card-title">
+  <h1 class="card-title mb-0 h5">
     <%= Spree.t(:promotion_actions) %>
   </h1>
 </div>
