--- a/backend/app/views/spree/admin/shared/_calculator_fields.html.erb
+++ b/backend/app/views/spree/admin/shared/_calculator_fields.html.erb
@@ -1,7 +1,7 @@
-<div id="calculator_fields" data-hook class="card  ">
+<div id="calculator_fields" data-hook class="card mb-3">
 
   <div class="card-header">
-    <h1 class="card-title">
+    <h1 class="card-title mb-0 h5">
       <%= Spree.t(:calculator) %>
     </h1>
   </div>
