--- a/backend/app/views/spree/admin/shared/_order_summary.html.erb
+++ b/backend/app/views/spree/admin/shared/_order_summary.html.erb
@@ -1,8 +1,7 @@
-<div class="card  ">
+<div class="card mb-3">
   <div class="card-header">
-    <h3 class="card-title"><%= Spree.t(:summary) %></h3>
+    <h3 class="card-title mb-0 h5"><%= Spree.t(:summary) %></h3>
   </div>
-
   <table class="table table-condensed table-bordered" id="order_tab_summary" data-hook>
     <tbody class="additional-info">
       <tr>
