--- a/frontend/app/views/spree/checkout/_confirm.html.erb
+++ b/frontend/app/views/spree/checkout/_confirm.html.erb
@@ -1,6 +1,6 @@
 <div class="card" id="order_details" data-hook>
   <div class="card-header">
-    <h3 class="card-title"><%= Spree.t(:confirm) %></h3>
+    <h3 class="card-title mb-0 h5"><%= Spree.t(:confirm) %></h3>
   </div>
   <div class="card-body">
     <%= render partial: 'spree/shared/order_details', locals: { order: @order } %>
