--- a/backend/app/assets/stylesheets/spree/backend/plugins/_jquery_ui.scss
+++ b/backend/app/assets/stylesheets/spree/backend/plugins/_jquery_ui.scss
@@ -94,6 +94,10 @@
         font-weight: 300;
       }
 
+      &.ui-datepicker-current-day {
+        background-color: $success;
+      }
+
       &:hover {
         background-color: $gray-100;
       }
