--- a/backend/app/views/spree/admin/adjustments/index.html.erb
+++ b/backend/app/views/spree/admin/adjustments/index.html.erb
@@ -9,7 +9,7 @@
 <% end %>
 
 <% if @adjustments.present? %>
-  <div class="card  ">
+  <div class="card mb-3">
     <%= render partial: 'adjustments_table' %>
   </div>
 <% else %>
