--- a/backend/app/views/spree/admin/orders/_add_line_item.html.erb
+++ b/backend/app/views/spree/admin/orders/_add_line_item.html.erb
@@ -2,9 +2,9 @@
 
 <%= render partial: "spree/admin/variants/autocomplete_line_items_stock", formats: :js %>
 
-<div id="add-line-item" data-hook class="card  ">
+<div id="add-line-item" data-hook class="card mb-3">
   <div class="card-header">
-    <h1 class="card-title"><%= Spree.t(:add_product) %></h1>
+    <h1 class="card-title mb-0 h5"><%= Spree.t(:add_product) %></h1>
   </div>
   <div class="card-body">
     <div data-hook="add_product_name" class="form-group">
