--- a/backend/app/views/spree/admin/orders/_adjustments.html.erb
+++ b/backend/app/views/spree/admin/orders/_adjustments.html.erb
@@ -1,7 +1,7 @@
 <% if adjustments.eligible.exists? %>
-  <div class="card  ">
+  <div class="card mb-3">
     <div class="card-header">
-      <h1 class="card-title">
+      <h1 class="card-title mb-0 h5">
         <%= title %>
       </h1>
     </div>
@@ -31,5 +31,6 @@
         <% end %>
       </tbody>
     </table>
+
   </div>
 <% end %>
