--- a/backend/app/views/spree/admin/stock_transfers/new.html.erb
+++ b/backend/app/views/spree/admin/stock_transfers/new.html.erb
@@ -20,9 +20,9 @@
 </script>
 
 <%= form_tag admin_stock_transfers_path, method: :post do %>
-  <div class="card  ">
+  <div class="card mb-3">
     <div class="card-header">
-      <h1 class="card-title">
+      <h1 class="card-title mb-0 h5">
         <%= Spree.t(:transfer_stock) %>
       </h1>
     </div>
@@ -53,23 +53,23 @@
     </div>
   </div>
 
-  <div class="card  " id="add-variant-to-transfer">
+  <div class="card mb-3" id="add-variant-to-transfer">
     <div class="card-header">
-      <h1 class="card-title">
+      <h1 class="card-title mb-0 h5">
         <%= Spree.t(:add_variant) %>
       </h1>
     </div>
 
     <div class="card-body">
       <div class="row">
-        <div class="col-xs-12 col-md-8">
+        <div class="col-12 col-lg-8">
           <div class="form-group" id="stock_movement_variant_id_field">
             <%= label_tag 'variant_id', Spree.t(:variant) %>
             <%= hidden_field_tag 'transfer_variant', {}, {class: 'fullwidth-input'} %>
           </div>
         </div>
 
-        <div class="col-xs-12 col-md-4">
+        <div class="col-12 col-lg-4">
           <div class="form-group" id="stock_movement_quantity_field">
             <%= label_tag :transfer_variant_quantity, Spree.t(:quantity) %>
             <div class="input-group">
