--- a/backend/app/views/spree/admin/users/_addresses_form.html.erb
+++ b/backend/app/views/spree/admin/users/_addresses_form.html.erb
@@ -1,8 +1,8 @@
 <div class="row">
-  <div data-hook="bill_address_wrapper" class="col-xs-12 col-md-6">
-    <div class="card  ">
+  <div data-hook="bill_address_wrapper" class="col-12 col-lg-6">
+    <div class="card mb-3">
       <div class="card-header">
-        <h1 class="card-title">
+        <h1 class="card-title mb-0 h5">
           <%= Spree.t(:billing_address) %>
         </h1>
       </div>
@@ -16,10 +16,10 @@
     </div>
   </div>
 
-  <div data-hook="ship_address_wrapper" class="col-xs-12 col-md-6">
-    <div class="card  ">
+  <div data-hook="ship_address_wrapper" class="col-12 col-lg-6">
+    <div class="card mb-3">
       <div class="card-header">
-        <h1 class="card-title">
+        <h1 class="card-title mb-0 h5">
           <%= Spree.t(:shipping_address) %>
         </h1>
       </div>
