--- a/backend/app/views/spree/admin/zones/_form.html.erb
+++ b/backend/app/views/spree/admin/zones/_form.html.erb
@@ -1,8 +1,8 @@
 <div class="row">
-  <div class="col-xs-12 col-md-6" data-hook="admin_zone_form_fields">
-    <div class="card  ">
+  <div class="col-12 col-lg-6" data-hook="admin_zone_form_fields">
+    <div class="card mb-3">
       <div class="card-header">
-        <h1 class="card-title"><%= Spree.t(:general_settings)%></h1>
+        <h1 class="card-title mb-0 h5"><%= Spree.t(:general_settings)%></h1>
       </div>
 
       <div class="card-body">
@@ -42,7 +42,7 @@
       </div>
     </div>
   </div>
-  <div class="col-xs-12 col-md-6">
+  <div class="col-12 col-lg-6">
     <%= render partial: 'state_members', locals: { zone_form: zone_form }%>
     <%= render partial: 'country_members', locals: { zone_form: zone_form } %>
   </div>
