Remove table top border

--- a/backend/app/assets/stylesheets/spree/backend/components/_tables.scss
+++ b/backend/app/assets/stylesheets/spree/backend/components/_tables.scss
@@ -8,6 +8,7 @@ table.table {
       padding-top: 14px;
       padding-bottom: 14px;
       vertical-align: top;
+      border-top: 0;
 
       a {
         .glyphicon {
