Remove label bottom margin

--- a/backend/app/assets/stylesheets/spree/backend/global/_variables.scss
+++ b/backend/app/assets/stylesheets/spree/backend/global/_variables.scss
@@ -27,3 +27,8 @@
   Navbar
   -----------------------------------------*/
   $navbar-inverse-bg: darken($primary, 35);
+
+/*------------------------------------------
+  Forms
+  -----------------------------------------*/
+  $label-margin-bottom: 0;
